<resources>
    <string name="app_name">Free To Play Games</string>
    <string name="start">Добро пожаловать в Free to Play Games</string>
    <string name="get_started">GET STARTED</string>
    <string name="info_01"> С помощью нашего приложения вы всегда будете в курсе последних раздач и акций! Для вас мы предоставляем легко доступную и актуальную информацию с различных игровых площадок. </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_discount">Discount</string>
    <string name="menu_game">Game giveaway</string>
    <string name="subnautica">Subnautica 75%</string>
    <string name="far_cry">Far_Cry_5 50%</string>
    <string name="rust">Rust 30%</string>
    <string name="info">Информация об игре</string>
    <string name="genre">Жанр:</string>
    <string name="teg">Теги:</string>
    <string name="data">Дата выхода:</string>
    <string name="rating">Рейтинг:</string>
    <string name="desc">Краткое описание</string>

    <string name="publisher">Publisher weekend up to 80% off</string>
    <string name="special_offers">Специльные предложения</string>
    <string name="stocks">Акции дня</string>


    <string name="Steam">Steam</string>
    <string name="Origin">Origin</string>
    <string name="Epic">Epic Games</string>
    <string name="GOG">GOG.com</string>
    <string name="Battle">Battle.net</string>
    <string name="XBOX">XBOX</string>
    <string name="PS4">PS4</string>
</resources>