<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Description2Activity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_back2"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:onClick="onClickGoBack"

        android:src="@drawable/ic_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/info"
        style="@style/text_24sp_bold_white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/info"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <TextView
        android:id="@+id/genre"
        style="@style/text_24sp_bold_white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/genre"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button">
    </TextView>

    <TextView
        android:id="@+id/teg"
        style="@style/text_24sp_bold_white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/teg"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genre">
    </TextView>

    <TextView
        android:id="@+id/data"
        style="@style/text_24sp_bold_white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/data"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teg">
    </TextView>

    <TextView
        android:id="@+id/rating"
        style="@style/text_24sp_bold_white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/rating"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/data">
    </TextView>

    <TextView
        android:id="@+id/desc"
        style="@style/text_24sp_bold_white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/desc"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating">
    </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>