<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartScreenActivity">
    <TextView
        android:id="@+id/start"
        android:layout_marginHorizontal="27dp"
        android:layout_marginTop="38dp"
        android:text="@string/start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/text_24sp_bold" />

    <TextView
        android:id="@+id/info_01"
        android:text="@string/info_01"
        style="@style/roboto_reg_16"
        android:lineSpacingMultiplier="1.65"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/GET_STARTED"
        style="@style/Button"
        android:layout_marginHorizontal="29dp"
        android:layout_marginBottom="19dp"

        android:onClick="onClickGoManagerProfileActivity"
        android:text="@string/get_started"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>