<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DiscountActivity">

    <ImageView
        android:id="@+id/back"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img_back2"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Steam"
        style="@style/Button_03"
        android:layout_marginTop="48dp"

        android:onClick="onClickGoDescription2Activity"
        android:text="@string/subnautica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/Origin"
        style="@style/Button_03"
        android:layout_marginTop="5dp"

        android:text="@string/far_cry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Steam" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Epic"
        style="@style/Button_03"
        android:layout_marginTop="5dp"

        android:text="@string/rust"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Origin" />
</androidx.constraintlayout.widget.ConstraintLayout>